--- a/sass/style.scss
+++ b/sass/style.scss
@@ -76,5 +76,10 @@ a:hover {
 
 .post {
     background-color: $bg1;
-    margin: 10px
+    margin: 10px;
+    padding: 10px 10px;
+}
+
+.post p {
+    margin-bottom: 0;
 }
