--- a/templates/section.html
+++ b/templates/section.html
@@ -9,7 +9,7 @@
 {% for page in section.pages %}
 {% if page.date %}
 <div class="post">
-    <a href="{{ page.permalink }}">{{ page.title }}</a> - {{ page.date }}
+    <a href="{{ page.permalink }}">{{ page.title }}</a> - {{ page.date | date(format= "%Y-%m-%d") }}
     {% if page.description %}
     <p>{{ page.description }}</p>
     {% endif %}
