--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,21 +1,27 @@
 $orange: rgb(247, 76, 0);
-$bg1: darken($orange, 45%);
-$bg0: darken($orange, 50%);
+// $bg1: darken($orange, 45%);
+$bg0: darken($orange, 48%);
 
 @font-face {
     font-family: "Source Sans 3";
-    src: url(/sourcesans/SourceSans3-VariableFont_wght.ttf);
+    src: url(/source/SourceSans3-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: "Source Code Pro";
+    src: url(/source/SourceCodePro-VariableFont_wght.ttf);
 }
 
 body {
     background-color: $bg0;
-    color: #FFF;
+    color: lighten($orange, 40%);
     font-family: "Source Sans 3";
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-shadow: 0px 0px 2px rgba(247, 76, 0, 1.0);
 }
 
 .wrapper {
@@ -30,17 +36,23 @@ h4,
 h5,
 h6 {
     color: $orange;
+    text-shadow: 0px 0px 2px rgba(247, 76, 0, 0.5);
+    font-family: "Source Code Pro";
+    font-weight: normal;
+
 }
 
 nav {
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    background-color: $bg1;
+    // background-color: $bg1;
+    border-bottom: $orange 1px dashed;
     padding: 0.5em;
 
     h1 {
         margin: 0px;
+        font-family: "Source Sans 3";
 
         a {
             text-decoration: none;
@@ -68,6 +80,7 @@ a,
 a:visited {
     color: $orange;
     text-decoration: underline;
+    font-family: "Source Code Pro";
 }
 
 a:hover {
@@ -75,11 +88,19 @@ a:hover {
 }
 
 .post {
-    background-color: $bg1;
+    // background-color: $bg1;
     margin: 10px;
     padding: 10px 10px;
 }
 
 .post p {
     margin-bottom: 0;
+}
+
+hr {
+    color: $orange;
+    text-shadow: 0px 0px 2px rgba(247, 76, 0, 0.6);
+    border-top: 1px dashed;
+    border-bottom: 0px;
+    margin: 1em;
 }
