--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,11 @@
     <meta property="og:url" content="{{ current_url }}">
     <meta property="og:description"
         content="{% block og_description %}{{ config.description }}{% endblock og_description %}">
-    <meta property="og:image" content="image.png">
+    <meta property="og:image" content="https://wayofthecrab.com/cover-art.png">
 
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <!-- <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml"> -->
+    <link rel="apple-touch-icon" href="https://wayofthecrab.com/apple-touch-icon.png">
 
     <link rel="stylesheet" href="/style.css">
     <link rel="alternative" href="/rss.xml" type="application/rss+xml">
