added 'latest episode' to the home page. Moved episodes to their own directory

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,7 @@
         content="{% block og_description %}{{ config.description }}{% endblock og_description %}">
     <meta property="og:image" content="https://wayofthecrab.com/cover-art.png">
 
-    <!-- <link rel="icon" href="/favicon.ico">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml"> -->
+    <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="https://wayofthecrab.com/apple-touch-icon.png">
 
     <link rel="stylesheet" href="/style.css">
