--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,106 +1,3 @@
-$orange: rgb(247, 76, 0);
-// $bg1: darken($orange, 45%);
-$bg0: darken($orange, 48%);
-
-@font-face {
-    font-family: "Source Sans 3";
-    src: url(/source/SourceSans3-VariableFont_wght.ttf);
-}
-
-@font-face {
-    font-family: "Source Code Pro";
-    src: url(/source/SourceCodePro-VariableFont_wght.ttf);
-}
-
-body {
-    background-color: $bg0;
-    color: lighten($orange, 40%);
-    font-family: "Source Sans 3";
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-shadow: 0px 0px 2px rgba(247, 76, 0, 1.0);
-}
-
-.wrapper {
-    padding: 10px;
-    max-width: 800px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: $orange;
-    text-shadow: 0px 0px 2px rgba(247, 76, 0, 0.5);
-    font-family: "Source Code Pro";
-    font-weight: normal;
-
-}
-
-nav {
-    display: flex;
-    align-items: baseline;
-    justify-content: space-between;
-    // background-color: $bg1;
-    border-bottom: $orange 1px dashed;
-    padding: 0.5em;
-
-    h1 {
-        margin: 0px;
-        font-family: "Source Sans 3";
-
-        a {
-            text-decoration: none;
-            font-size: 24pt;
-        }
-    }
-
-    ul li {
-        display: inline-block;
-        font-size: 18pt;
-        padding-left: 1em;
-
-        a,
-        a:visited {
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    }
-}
-
-a,
-a:visited {
-    color: $orange;
-    text-decoration: underline;
-    font-family: "Source Code Pro";
-}
-
-a:hover {
-    color: lighten($orange, 10%);
-}
-
-.post {
-    // background-color: $bg1;
-    margin: 10px;
-    padding: 10px 10px;
-}
-
-.post p {
-    margin-bottom: 0;
-}
-
-hr {
-    color: $orange;
-    text-shadow: 0px 0px 2px rgba(247, 76, 0, 0.6);
-    border-top: 1px dashed;
-    border-bottom: 0px;
-    margin: 1em;
-}
+@import "colors";
+@import "typography";
+@import "layout";
