--- a/templates/page.html
+++ b/templates/page.html
@@ -10,12 +10,17 @@ endblock og_description %}
 {% if page.date %}
 <h4>Published {{ page.date | date(format= "%Y-%m-%d") }}</h4>
 {% endif %}
+
 {% if page.extra.aac_url %}
 <audio controls>
-    <source src="{{page.extra.aac_url}}" type="audio/aac">
+    <source src="{{ page.extra.aac_url }}" type="audio/aac">
 </audio>
-<p class="audio-link">Controls not working? The episode can be <a href="{{page.extra.aac_url}}">downloaded here</a>.
+
+<p class="audio-link">
+    Controls not working? 
+    The episode can be <a href="{{ page.extra.aac_url }}">downloaded here</a>.
 </p>
 {% endif %}
+
 {{ page.content | safe }}
 {% endblock content %}
