make player width 100% everywhere

--- a/templates/section.html
+++ b/templates/section.html
@@ -11,7 +11,7 @@
 
 <section class="latest-ep">
     <div class="latest-ep_heading">
-        <h3>[ Latest episode ]</h3>
+        <h3>[ {{ latest.title }} ]</h3>
     </div>
     <div class="latest-ep_description">
         <p>{{ latest.description }}</p>
