added some basic js to remember player location

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,8 @@
             {% block content %}{% endblock content %}
         </main>
     </div>
+
+    <!-- <script src="/player.js" type="text/javascript"></script> -->
 </body>
 
 </html>
