--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         </main>
     </div>
 
-    <!-- <script src="/player.js" type="text/javascript"></script> -->
+    <script src="/player.js" type="text/javascript"></script>
 </body>
 
 </html>
