--- a/templates/section.html
+++ b/templates/section.html
@@ -1,37 +1,39 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Episodes and Posts</h2>
+<h2>Latest Episodes</h2>
 
 {% set episodes = get_section(path = "episodes/_index.md") %}
 
 <!-- Latest episode -->
 {% if episodes %}
-{% set latest = episodes.pages.0 %}
+    {% set latest = episodes.pages | last %}
 
-<section class="latest-ep">
-    <div class="latest-ep_heading">
-        <h3>[ {{ latest.title }} ]</h3>
-    </div>
-    <div class="latest-ep_description">
-        <p>{{ latest.description }}</p>
-        <aside>
-            <audio controls>
-                <source src="{{ latest.extra.aac_url }}" type="audio/aac">
-            </audio>
-        </aside>
-    </div>
-</section>
-
-
+    <section class="latest-ep">
+        <div class="latest-ep_heading">
+            <h3>[ <a href="{{ latest.permalink }}">{{ latest.title }}</a> ]</h3>
+        </div>
+        <div class="latest-ep_description">
+            <p>{{ latest.description }}</p>
+            <aside>
+                <audio controls>
+                    <source src="{{ latest.extra.aac_url }}" type="audio/aac">
+                </audio>
+            </aside>
+            <p class="audio-link">
+                Controls not working?
+                The episode can be <a href="{{ latest.extra.aac_url }}">downloaded here</a>.
+            </p>
+        </div>
+    </section>
 {% endif %}
 
 {% if section.description %}
-<p>{{ section.description }}</p>
+    <p>{{ section.description }}</p>
 {% endif %}
 
 {% for page in episodes.pages %}
-    {% if page.date %}
+    {% if page.date and page.permalink != latest.permalink %}
         {% if has_row %}
             <hr>
         {% else %}
@@ -40,7 +42,7 @@
         <div class="post">
             <a href="{{ page.permalink }}"># {{ page.title }}</a> - {{ page.date | date(format= "%Y-%m-%d") }}
             {% if page.description %}
-            <p>{{ page.description }}</p>
+                <p>{{ page.description }}</p>
             {% endif %}
         </div>
     {% endif %}
