--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/about/">About Us</a></li>
-                    <li><a href="/rss.xml">RSS Feed</a></li>
+                    <li><a href="/subscribe/">Subscribe</a></li>
                 </ul>
             </nav>
         </header>
