make it possible to link to a particular playhead location

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -146,8 +146,10 @@ hr {
     }
 }
 
-.audio-link {
+
+.audio-meta {
+    display: flex;
+    justify-content: space-between;
     font-size: x-small;
     font-style: italic;
-    text-align: right;
 }
